@@ -1,3 +1,8 @@
+2003-10-01  Daniel Steffen  <das@users.sourceforge.net>
+
+	* macosx/Makefile: fixed redo prebinding bug when DESTDIR="".
+	* mac/tclMacResource.c: fixed possible NULL dereference (bdesgraupes).
+
 2003-09-29  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclBasic.c (CallCommandTraces):	Added safety bit
